# jugalbandi-old_deprecated

./: jb.code-workspace
jb-generic-qa/generic_qa/: server.py  server_helper.py
jb-tenant-service/: README.md  pyproject.toml
jb-tenant-service/tenant/: auth_api.py  helper.py  server.py  user_api.py
jb-tenant-service/tools/: Dockerfile  run-docker.sh  run-server.sh
